Refactored the project